--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^6.0.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "body-parser": "^1.20.2",
     "dialogflow": "^1.2.0",
     "express": "^4.18.2",
